[package]
name = "xtab"
version = "0.0.2"
edition = "2021"
homepage = "https://github.com/sharkLoc/xtab"
description = "xtab: CSV command line utilities"
repository = "https://github.com/sharkLoc/xtab"
keywords = ["csv"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
atty = "0.2.14"
bzip2 = "0.4.4"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
comfy-table = "7.1.1"
csv = "1.3.0"
env_logger = "0.10.0"
flate2 = "1.0.28"
log = "0.4.21"
xz2 = "0.1.7"
