[package]
name = "xtab"
version = "0.1.0"
authors = ["sharkLoc <mmtinfo@163.com>"]
edition = "2024"
rust-version = "1.85.0"
homepage = "https://github.com/sharkLoc/xtab"
description = "xtab: CSV command line utilities"
repository = "https://github.com/sharkLoc/xtab"
keywords = ["csv","tsv","xlsx"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
bzip2 = "0.5.2"
calamine = "0.26.1"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive", "wrap_help"] }
comfy-table = "7.1.4"
csv = "1.3.1"
env_logger = { version = "0.10.2"}
flate2 = "1.1.0"
log = "0.4.26"
rand = "0.9.0"
rand_pcg = "0.9.0"
regex = "1.11.1"
rust_xlsxwriter = "0.84.0"
thiserror = "2.0.12"
xz2 = "0.1.7"

[profile.release]
strip = true
